# clarify

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/prompts/: rs.txt  rs_with_comments.txt
