[package]
name = "clarify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama_cpp_rs = "0.3.0"
syn = {version = "2.0.39", features = ["full", "extra-traits", "printing"]}

[features]
cuda = ["llama_cpp_rs/cuda"]
